--- a/dots/.config/code-flags.conf
+++ b/dots/.config/code-flags.conf
@@ -4,3 +4,6 @@
 --enable-features=TouchpadOverscrollHistoryNavigation
 --enable-wayland-ime
 --password-store=gnome-libsecret
+--enable-features=UseOzonePlatform 
+--ozone-platform=wayland
+--use-gl=desktop
