--- a/dots/.config/hypr/hypridle.conf
+++ b/dots/.config/hypr/hypridle.conf
@@ -15,12 +15,12 @@ listener {
 }
 
 listener {
-    timeout = 600 # 10mins
+    timeout = 900 # 10mins
     on-timeout = hyprctl dispatch dpms off
     on-resume = hyprctl dispatch dpms on
 }
 
-listener {
-    timeout = 900 # 15mins
-    on-timeout = $suspend_cmd
-}
+# listener {
+#     timeout = 900 # 15mins
+#     on-timeout = $suspend_cmd
+# }
