synced custom hyprland conf

--- a/dots/.config/hypr/custom/general.conf
+++ b/dots/.config/hypr/custom/general.conf
@@ -1,6 +1,45 @@
 # Put general config stuff here
 # Here's a list of every variable: https://wiki.hyprland.org/Configuring/Variables/
 
-# monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
+workspace = 1, monitor:DP-2, default:true
+workspace = 2, monitor:HDMI-A-1
 
-# HDMI port: mirror display. To see device name, use `hyprctl monitors`
+input {
+    scroll_method = on_button_down
+    scroll_button = 274
+    sensitivity = -0.8
+}
+
+decoration{
+    blur {
+        enabled = true
+        xray = false
+        special = false
+        new_optimizations = true
+        size = 4
+        passes = 1
+        brightness = 1.0
+        noise = 0.04
+        # contrast = 1
+        popups = true
+        popups_ignorealpha = 0.6
+        input_methods = true
+        input_methods_ignorealpha = 0.8
+        new_optimizations = true
+    }
+}
+
+general {
+    # layout = scrolling
+}
+
+plugin {
+    hyprscrolling {
+        fullscreen_on_one_column = true
+    }
+}
+
+misc {
+    vfr = 1 # Prevents the refresh rate from dropping when idle
+    vrr = 1 # 0=off, 1=on, 2=fullscreen only
+}
