--- a/dots/.config/hypr/custom/rules.conf
+++ b/dots/.config/hypr/custom/rules.conf
@@ -2,10 +2,8 @@
 # Window/layer rules: https://wiki.hyprland.org/Configuring/Window-Rules/
 # Workspace rules: https://wiki.hyprland.org/Configuring/Workspace-Rules/
 
-# ######## Window rules ########
-
-# Uncomment to apply global transparency to all windows:
-# windowrulev2 = opacity 0.89 override 0.89 override, class:.*
-
-# Disable blur for all xwayland apps
-# windowrulev2 = noblur, xwayland:1
+windowrule = workspace 1,class:zen
+windowrule = workspace 2,class:discord
+windowrule = workspace 3,class:code
+windowrulev2 = float, class:waydroid.*
+windowrulev2 = float, class:Waydroid
