--- a/dots/.config/hypr/custom/execs.conf
+++ b/dots/.config/hypr/custom/execs.conf
@@ -1,6 +1,14 @@
 # You can make apps auto-start here
 # Relevant Hyprland wiki section: https://wiki.hyprland.org/Configuring/Keywords/#executing
 
-# Input method
-# exec-once = fcitx5
+# Move cursor to primary monitor
+exec-once = hyprctl dispatch workspace 1
 
+# Auto-launch
+# exec-once = code
+exec-once = zen-browser
+exec-once = sunshine
+# exec-once = flatpak run com.discordapp.Discord
+
+exec-once = mpd-mpris
+exec-once = pypr
