synced custom hyprland conf

--- a/dots/.config/hypr/custom/rules.conf
+++ b/dots/.config/hypr/custom/rules.conf
@@ -9,3 +9,8 @@
 
 # Disable blur for all xwayland apps
 # windowrule = no_blur on, match:xwayland 1
+windowrule = workspace 1,class:zen
+windowrule = workspace 2,class:discord
+windowrule = workspace 3,class:code
+windowrulev2 = float, class:waydroid.*
+windowrulev2 = float, class:Waydroid
